src/test/error/macro4.lns
{
   macro _hoge( val:__exp ) {
      print( ,,val );
   }
   fn sub() : int, int {
      return 1, 2;
   }
   _hoge( sub() ); // error
}
